# celp_demo

./: .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml
celp_codec/: __init__.py  acelp.py  bitstream.py  celp_codebook.py  cli.py  codec.py  filters.py  gains.py  lpc.py  lsf.py  metrics.py  pitch.py  timbre.py  wav_io.py
tests/: __init__.py  test_bitstream.py  test_lpc_stability.py  test_lsf.py  test_roundtrip.py  test_timbre.py
timbre_demo/: timbre_demo.html
tools/: make_audio_gallery.py  make_timbre_demo.py
